k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rest-server
  labels:
    name: rest-server
    environment: production
